Update to SBT 2.0.1